# ApproxASP2

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  README.md  basic.lp  bitarray.h  gausswatched.h  graph-coloring_decision.lp  graphColoring_init8.lp  ham_cycle.lp  model_counting.c  packedmatrix.h  qbf.lp  qbf1.lp  qbf_init8.lp  schur-problem.lp  solverState.h  sub-ind-mahi.init1  test.c  utility.c  vertex-cover.lp
MIS/: IS_hampath_init10.lp  IS_random_graph_20_3.zip.lp  IS_random_graph_20_5.zip.lp  IS_random_graph_20_6.zip.lp  IS_random_graph_40_4.zip.lp  hampath_init10.lp  mis_calculator.py  mis_disjunctive.py  random_graph_20_3.zip.lp  random_graph_20_4.zip.lp  random_graph_20_5.zip.lp  random_graph_20_6.zip.lp  random_graph_40_4.zip.lp
app/pyclingo/: CMakeLists.txt
doc/py/: gen.py  index.md
doc/py/_gen/: gen.py  monitor.sh
doc/py/_gen/templates/: html.mako
doc/py/css/: pdoc.css
libclingo/: clingo.h
libclingo/src/: control.cc
libgauss/: CMakeLists.txt  EGaussian.cpp  EGaussian.h  Makefile  Vec.h  countPropagator.cpp  countPropagator.h  debug.txt  gqueuedata.h  independent_ham_cycle.cnf  iterations.c  iterations.cpp  iterations.h  model_counting.c  model_counting.cpp  model_counting.h  packedmatrix.h  packedrow.cpp  packedrow.h  propagator.cpp  propagator.h  solverState.h  solverstate.h  solvertypes.h  solvertypesmini.h  test.cpp  test_new.c  test_parity.txt  test_prop.c  utility.cpp  utility.h  xor.h
libpyclingo/: pyclingo.cc
src/: Makefile  test.c
